Wed Apr 22 16:29:18 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* ping.c: New file.  Originally P.D. from US Army; then modified
	by BSD, then added to Linux.  Taken from Linux ping and adapted
	for Hurd and submitted for inclusion by Kunihiro Ishiguro
	(kunihiro@zebra.org). 
	* Makefile (targets): Add `ping'.
	(SRCS): Add `ping.c'.
	(ping-CPPFLAGS): New variable, to find <linux/icmp.h> in the
	pfinet sources.
	(INSTALL-ping-ops): Install ping suid root.
	(ping): Depend on `../libthreads/libthreads.a'.

1997-09-29  Miles Bader  <miles@gnu.ai.mit.edu>

	* unsu.c (argp_program_version): Use correct program name.

1997-09-26  Miles Bader  <miles@gnu.ai.mit.edu>

	* frobauth-mod.c (frobauth_modify): Add AUTHS & NUM_AUTHS parameters.
	* frobauth.h (frobauth_modify): Add AUTHS & NUM_AUTHS parameters.
	* rmauth.c (main): Supply new args to frobauth_modify.
	* unsu.c (main): Likewise.
	* setauth.c (main): Likewise.
	* login.c (main): Use ugids_verify_make_auth instead of
	ugids_verify and ugids_make_auth.
	* addauth.c (main): Likewise.
	* setauth.c (main): Likewise.

	* w.c (main): Remove DEFAULT_OUTPUT variable.

1997-08-08  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpcp.c (eappend, ebasename): New functions.
	(append_basename): New function.
	(main): Move target directory handling to append_basename.
	Use it also with remote transfers.

	* ftpcp.c (cntl_debug): Print CONN->hook as a string before any output.
	(main): Set the connection hooks to appropriate strings.
	(econnect): Add NAME parameter, & set connection hook from it.

1997-07-29  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpcp.c (main): When mungeing the destination to copy into a
	directory, do the name used to print error messages too.

1997-07-15  Miles Bader  <miles@gnu.ai.mit.edu>

	* vmstat.c (ensure_def_pager_info): Don't report any errors if
	there's no default pager.

1997-07-10  Miles Bader  <miles@gnu.ai.mit.edu>

	* vmstat.c (main): Don't print fields we cannot get.
