@@ -1,3 +1,9 @@
+Wed Apr 22 16:38:59 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>
+
+	* ping.c (MAXHOSTNAMELEN): Don't define.
+	(main): Delete variable `hnamebuf'.  Store directly into properly
+	malloced `hostname' variable.
+
 Wed Apr 22 16:29:18 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>
 
 	* ping.c: New file.  Originally P.D. from US Army; then modified
